feat(sql): update Trino function catalog + verify oracle to 483
Regenerate GeneratedTrinoFunctionCatalog.kt from a stock trinodb/trino:483
container SHOW FUNCTIONS dump (Method A), which bundles the geospatial + ML
plugins the old in-JVM harness (Method B) missed. 442 defs / 808 overloads
(was 320 / 654): adds ends_with, title_case, ST_* (80), geometry_collect_agg,
bing_tile*, DataSketches, cosine_distance, learn_*/regress/classify, etc.

- vendor/data/trino-functions-481.tsv -> trino-functions-483.tsv
- generate_trino_functions.py: Method A (container) provenance + recipe
- bump io.trino:trino-parser 481 -> 483 in brikk-sql-verify (30 tests pass)
- docs/trino-483-parity-todo.md: unhandled 482/483 grammar for future work

TrinoGrammarBuiltins header re-pinned to 483 sources; FunctionCatalogTest
count 320 -> 442.